<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView android:src="@drawable/ic_action_maps"
            android:minWidth="150dp"
            android:minHeight="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            fontPath="fonts/Roboto-Bold.ttf"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/location_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />

        <TextView android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_prompt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/enable_location_button"
            android:text="@string/enable_location"
            android:background="@drawable/button_background"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/skip_button"
            android:text="@string/skip"
            android:background="@android:color/transparent"
            android:textColor="@color/light_gray"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>