<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/attendee_profile_image"
                android:layout_width="?attr/listPreferredItemHeightLarge"
                android:layout_height="?attr/listPreferredItemHeightLarge"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/attendee_image"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/attendee_first_name"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/attendee_profile_image"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix"
                tools:text="Adam Sandler" />

            <TextView
                android:id="@+id/attendee_last_name"
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/attendee_first_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/attendee_profile_image"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix"
                tools:text="Designer" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/postition_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/position"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/attendee_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="34" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/company_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postition_container"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/company"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/attendee_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="34" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_container"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/attendee_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="34" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_container"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/attendee_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="34" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/age_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_container"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/attendee_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="34" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/city_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age_container"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/lives_in"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/attendee_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="Miami" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/country_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_container"
            android:orientation="vertical">

            <TextView
                fontPath="fonts/Roboto-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/country"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/attendee_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="US" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>